# dbx-poetry

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/conf/: deployment.yaml
{{cookiecutter.project_name}}/tests/unit/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: common.py
