[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.authors}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dbx = "0.7.4"
pyspark = "3.2.1"
pandas = "^1.4.4"
pyarrow = "^9.0.0"
delta-spark = "1.1.0"
PyYAML = "^6.0"
mlflow = "^1.28.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
dbx = "0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
